--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.8.1",
+    "multer": "^1.4.5-lts.1",
     "nunjucks": "^3.2.4"
   }
 }
