--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
-    "nunjucks": "^3.2.4"
+    "nunjucks": "^3.2.4",
+    "nunjucks-date-filter": "^0.1.1"
   }
 }
