--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "practica1modeldedades",
   "version": "1.0.0",
-  "main": "script.js",
+  "main": "index.js",
   "scripts": {
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
